--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,37 @@
 {
-    "manifest_version": 2,
-    "name": "GitLab Ticket Creator",
-    "version": "1.0",
-    "description": "Erstellt GitLab-Issues aus E-Mails.",
-    "applications": {
-        "gecko": {
-            "id": "gitlab-ticket-addon@example.com",
-            "strict_min_version": "91.0"
-        }
-    },
-    "options_ui": {
-        "page": "options/options.html",
-        "open_in_tab": true
-    },
-    "permissions": [
-        "messagesRead",
-        "storage",
-        "menus",
-        "tabs",
-        "notifications"
-    ],
-    "background": {
-        "scripts": [
-            "background.js"
-        ]
-    },
-    "browser_action": {
-        "default_title": "GitLab Ticket erstellen",
-        "default_icon": "icon.png"
-    },
-    "icons": {
-        "48": "icon.png"
+  "manifest_version": 2,  
+  "name": "GitLab Ticket Creator",
+  "version": "1.1.0",
+  "description": "Erstellt GitLab-Issues aus E-Mails.",
+  "author": "kirchner@visionconnect.de",
+  "applications": {        
+    "gecko": {
+      "id": "{fd1a5db1-ab67-4b72-9139-dc073a4dac2e}",
+      "strict_min_version": "91.0", 
+      "update_url": "https://example.com/update.json"
     }
+  },
+  "options_ui": {
+    "page": "options/options.html",
+    "open_in_tab": true
+  },
+  "permissions": [
+    "messagesRead",
+    "storage",
+    "menus",
+    "tabs",           
+    "notifications"
+  ],
+  "background": {
+    "scripts": [      
+      "dist/bundled-background.js" 
+    ]
+  },
+  "browser_action": {   
+    "default_title": "GitLab Ticket erstellen",
+    "default_icon": "icon.png"
+  },
+  "icons": {
+    "48": "icon.png"
+  }
 }
