Refactor GitLab Ticket Creator Add-on
- Updated README.md to reflect changes in project structure and file names.
- Modified background.js to use new ticket_creator.html and ticket_creator.js files.
- Removed api.js function for setting API base URL; now using a constant.
- Enhanced gitlab.js to include user validation and caching for project fetching.
- Replaced project_selector.html and project_selector.js with ticket_creator.html and ticket_creator.js for improved ticket creation UI.
- Added theme.css for consistent styling across the add-on.
- Updated options.html and options.js to improve token visibility and storage handling.
- Bumped version numbers in package.json and manifest.json to 1.1.1.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "thunderbird-gitlab-issue",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Erstellt GitLab-Issues aus E-Mails.",
   "main": "background.js",
   "scripts": {
-    "build": "rollup -c",
-    "watch": "rollup -c -w"
+    "build": "npm i && rollup -c",
+    "watch": "npm i && rollup -c -w"
   },
   "keywords": [],
   "author": "kirchner@visionconnect.de",
