--- a/manifest.json
+++ b/manifest.json
@@ -29,9 +29,12 @@
   },
   "browser_action": {   
     "default_title": "GitLab Ticket erstellen",
-    "default_icon": "icon.png"
+    "default_icon": "icons/icon-48x.png"
   },
   "icons": {
-    "48": "icon.png"
+    "64": "icons/icon-64px.png",
+    "48": "icons/icon-48px.png",
+    "32": "icons/icon-32px.png",
+    "16": "icons/icon-16px.png"
   }
 }
