--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-  "manifest_version": 2,  
+  "manifest_version": 2,
   "name": "GitLab Ticket Creator",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Erstellt GitLab-Issues aus E-Mails.",
   "author": "kirchner@visionconnect.de",
-  "applications": {        
+  "applications": {
     "gecko": {
       "id": "{fd1a5db1-ab67-4b72-9139-dc073a4dac2e}",
-      "strict_min_version": "91.0", 
+      "strict_min_version": "91.0",
       "update_url": "https://example.com/update.json"
     }
   },
@@ -19,23 +19,25 @@
     "messagesRead",
     "storage",
     "menus",
-    "tabs",           
+    "tabs",
     "notifications"
   ],
   "background": {
-    "scripts": [      
-      "dist/bundled-background.js" 
+    "scripts": [
+      "dist/bundled-background.js"
     ]
   },
   "browser_action": {
-    "allowed_spaces": ["mail"],
+    "allowed_spaces": [
+      "mail"
+    ],
     "default_title": "Create GitLab Issue",
     "default_icon": "icons/icon-48px.png"
   },
   "icons": {
-    "64": "icons/icon-64px.png",
-    "48": "icons/icon-48px.png",
+    "16": "icons/icon-16px.png",
     "32": "icons/icon-32px.png",
-    "16": "icons/icon-16px.png"
+    "48": "icons/icon-48px.png",
+    "64": "icons/icon-64px.png"
   }
 }
