--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
-  "version": "5.1.1",
+  "version": "5.2.0",
   "default_locale": "de",
   "description": "__MSG_extensionDescription__",
   "author": "kirchner@visionconnect.de",
@@ -18,7 +18,8 @@
   "permissions": [
     "messagesRead",
     "storage",
-    "notifications"
+    "notifications",
+    "menus"
   ],
   "background": {
     "scripts": [
