--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
-    "rollup": "^4.44.2"
+    "rollup": "^4.44.2",
+    "rollup-plugin-copy": "^3.5.0"
   },
   "dependencies": {
     "archiver": "^7.0.1",
+    "easymde": "^2.20.0",
     "rimraf": "^6.0.1"
   }
 }
