--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
   "version": "5.3.0",
-  "default_locale": "de",
+  "default_locale": "en",
   "description": "__MSG_extensionDescription__",
   "author": "kirchner@visionconnect.de",
   "browser_specific_settings": {
