--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gitlab-ticket-creator",
+  "name": "gitlab-issue-creator",
   "version": "5.3.0",
   "description": "Erstellt GitLab-Issues aus E-Mails.",
   "main": "background.js",
