Remove unused watch script and added packSrc command in package.json

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "version:major": "node scripts/bump-version.js major",
     "build:dev": "npm i && rollup -c",
     "build": "npm i && node scripts/build.js",
-    "watch": "npm i && rollup -c -w",
     "build:version:patch": "npm i && node scripts/build-version.js patch",
     "build:version:minor": "npm i && node scripts/build-version.js minor",
-    "build:version:major": "npm i && node scripts/build-version.js major"
+    "build:version:major": "npm i && node scripts/build-version.js major",
+    "packSrc": "node scripts/pack-src.js"
   },
   "keywords": [],
   "author": "kirchner@visionconnect.de",
