--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
-  "name": "__MSG_extensionName__",
+  "name": "__MSG_ExtensionName__",
   "version": "5.3.3",
   "default_locale": "en",
-  "description": "__MSG_extensionDescription__",
+  "description": "__MSG_ExtensionDescription__",
   "author": "kirchner@visionconnect.de",
   "browser_specific_settings": {
     "gecko": {
